# dotfiler

./: .gitignore  .shuck.toml  README.md  always_exclude  check_update.sh  check_update.zsh  completions.zsh  dotfiler  dotfiler-gui  dotfiler_exclude  dotfiles_exclude  git_commands.zsh  helpers.sh  helpers.zsh  install.sh  install.sh.template  install.zsh  install_module.sh  install_module.zsh  logging.sh  logging.zsh  module_helpers.sh  module_helpers.zsh  pyproject.toml  python_requirements.txt  setup.sh  setup.zsh  setup_core.zsh  update.sh  update.zsh  update_core.sh  update_core.zsh  update_self.sh  update_self.zsh
.nounpack/dotfiler/: dotfiler  requirements.txt
docs/: authoring-install-files.md  how-updates-work.md  update-hooks.md  zdot-integration.md
example_install/: 00-dotfiler-install.sh  00-dotfiler-install.zsh  01-package-manager.sh  02-development-tools.sh  02-shell-utils.sh  02-shell-utils.zsh  03-development-tools.sh  03-development-tools.zsh  03-editors-terminals.sh  04-editors-terminals.sh  04-editors-terminals.zsh  04-programming-languages.sh  05-applications.sh  05-editor-extras.sh  05-editor-extras.zsh  05-programming-languages.sh  06-applications.sh  06-post-install.sh  06-programming-languages.zsh  07-ai.zsh  07-post-install.sh  08-applications.zsh  09-post-install.zsh  README.md  helpers.sh  helpers.zsh  test_install.sh
test/: test_gitignore_match.zsh
